log/build_2024-06-12_14-20-11/realtime_plot_of_data/stdout_stderr.log
running egg_info
writing ../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/PKG-INFO
writing dependency_links to ../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/dependency_links.txt
writing entry points to ../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/entry_points.txt
writing requirements to ../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/requires.txt
writing top-level names to ../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/top_level.txt
reading manifest file '../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/SOURCES.txt'
writing manifest file '../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info/SOURCES.txt'
running build
running build_py
copying realtime_plot_of_data/force_torque_plotter.py -> /home/simi/franka_ros2_ws/build/realtime_plot_of_data/build/lib/realtime_plot_of_data
running install
running install_lib
copying /home/simi/franka_ros2_ws/build/realtime_plot_of_data/build/lib/realtime_plot_of_data/force_torque_plotter.py -> /home/simi/franka_ros2_ws/install/realtime_plot_of_data/lib/python3.10/site-packages/realtime_plot_of_data
byte-compiling /home/simi/franka_ros2_ws/install/realtime_plot_of_data/lib/python3.10/site-packages/realtime_plot_of_data/force_torque_plotter.py to force_torque_plotter.cpython-310.pyc
  File "/home/simi/franka_ros2_ws/install/realtime_plot_of_data/lib/python3.10/site-packages/realtime_plot_of_data/force_torque_plotter.py", line 31
    self.torque_lines = [self.ax2.plot([], []label=f'Torque {i+1}')[0] for _ in range(3)]
                                           ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

running install_data
running install_egg_info
removing '/home/simi/franka_ros2_ws/install/realtime_plot_of_data/lib/python3.10/site-packages/realtime_plot_of_data-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/realtime_plot_of_data/realtime_plot_of_data.egg-info to /home/simi/franka_ros2_ws/install/realtime_plot_of_data/lib/python3.10/site-packages/realtime_plot_of_data-0.0.0-py3.10.egg-info
running install_scripts
Installing force_torque_plotter script to /home/simi/franka_ros2_ws/install/realtime_plot_of_data/lib/realtime_plot_of_data
writing list of installed files to '/home/simi/franka_ros2_ws/build/realtime_plot_of_data/install.log'
